--- a/favourite.html
+++ b/favourite.html
@@ -407,17 +407,17 @@
     </caption>
   <tbody>
     <tr>
-      <td align="center" width="50%"><a href="http://192.168.0.79/"><font size="-1">Humax</font></a><font size="-1"> Denon <a href="http://192.168.0.70/index.asp">old</a> <a href="http://192.168.0.91">new</a> <a href="http://192.168.0.92">HDMI 4x4</a> </font></td>
+      <td align="center" width="50%"><a href="http://192.168.0.79/"><font size="-1">Humax</font></a><font size="-1"> <a href="http://192.168.0.91">Denon</a> <a href="http://192.168.0.92">HDMI 4x4</a> </font></td>
       </tr>
     <tr>
       <td align="center" width="50%"><a href="http://192.168.0.100/doc/page/preview.asp" class="SmallerFont">DVR (IE only)</a></td>
       </tr>
     <tr>
-      <td width="50%" align="center" class="SmallerFont"><font size="-1">LMS:<a href="http://192.168.0.61:9000/">TS453</a> <a href="http://192.168.0.62:9000/">TS251</a></font></td>
+      <td width="50%" align="center" class="SmallerFont"><font size="-1">Containers:<a href="http://192.168.0.62:9000/">LMS</a> <a href="http://192.168.0.62:8112"> Deluge</a></font></td>
       </tr>
 
     <tr>
-      <td align="center"><font size="-1">WLAN<span class="SmallerFont"> <a href="http://192.168.0.7/cgi-bin/luci">Balcony</a> Wifi: <a href="http://192.168.0.11">Lounge</a> <a href="http://192.168.0.6/cgi-bin/luci">Pronto</a></span></font></td>
+      <td align="center"><font size="-1">WiFi:<span class="SmallerFont"> <a href="http://192.168.0.15">Lounge</a> <a href="http://192.168.0.7/cgi-bin/luci">Balcony</a></span></font></td>
       </tr>
     <tr>
       <td align="center"><font size="-1">Routers: <a href="http://192.168.0.1">Lounge</a> <a href="http://192.168.0.5">24 port</a> <a href="http://192.168.0.10">Shop</a></font></td>
@@ -426,10 +426,10 @@
       <td align="center" class="SmallerFont"><a href="http://192.168.0.96:8080">Kodi</a></td>
     </tr>
     <tr>
-      <td align="center" class="SmallerFont"><a href="http://192.168.0.61:8080">TS453A</a> <a href="http://192.168.0.63:8080">TS431</a> <a href="http://192.168.0.63:8080/downloadstation/">(DL) </a></td>
+      <td align="center" class="SmallerFont"><a href="http://192.168.0.61:8080">TS453A</a> <a href="http://192.168.0.63:8080">TS431</a> <a href="http://192.168.0.62:8080">TS251</a></td>
     </tr>
     <tr>
-      <td align="center" class="SmallerFont"><a href="http://192.168.0.60">Synology</a> <a href="http://192.168.0.62:8080">TS251</a> <a href="http://192.168.0.62:8112">        Deluge</a></td>
+      <td align="center" class="SmallerFont"><a href="http://192.168.0.60">Synology</a>  </td>
       </tr>
     <tr>
       <td align="center" class="SmallerFont">Printers: <a href="http://192.168.0.35">Canon B&amp;W</a> (<a href="https://oip.manual.canon/USRMA-6516-zz-SSM-450-enGB/">manual</a>)</td>
